--- a/KafkaDemo.ipynb
+++ b/KafkaDemo.ipynb
@@ -57,7 +57,18 @@
      "start_time": "2024-09-03T20:53:48.290645Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Topic: lab02-yuboc\n",
+      "/Users/marstbowl/Desktop/17645/mlip-lab-2/.venv/bin/python\n",
+      "7.1.0\n",
+      "2.3.0\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from datetime import datetime\n",
@@ -69,9 +80,9 @@
     "\n",
     "# [TODO]: Fill in a unique identifier so your topic doesn't collide with others'\n",
     "# Replace ... with your andrew_id as a string (e.g., \"asmith\") or any unique identifier\n",
-    "andrew_id = ...  # Example: andrew_id = \"asmith\"\n",
+    "andrew_id = \"yuboc\"  # Example: andrew_id = \"asmith\"\n",
     "topic = f\"lab02-{andrew_id}\"\n",
-    "print(f\"Topic: {topic}\")"
+    "print(f\"Topic: {topic}\")\n"
    ]
   },
   {
@@ -222,7 +233,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.12.6 64-bit ('3.12.6')",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -236,12 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "8489a72b3ad1d54b6341ce544695b513282ff2c0e2ec9633f081b89a69ecdb6a"
-   }
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
