--- a/KafkaDemo.ipynb
+++ b/KafkaDemo.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "560fd2bb",
    "metadata": {
     "ExecuteTime": {
@@ -62,10 +62,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Topic: lab02-yuboc\n",
-      "/Users/marstbowl/Desktop/17645/mlip-lab-2/.venv/bin/python\n",
-      "7.1.0\n",
-      "2.3.0\n"
+      "Topic: lab02-yuboc\n"
      ]
     }
    ],
@@ -95,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "3ace33c5",
    "metadata": {},
    "outputs": [],
@@ -111,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "aa4679a1",
    "metadata": {},
    "outputs": [],
@@ -122,20 +119,30 @@
     "# [TODO]: Fill in the address of your Kafka bootstrap server\n",
     "# [TODO]: Kafka expects messages as bytes. Explore the documentation and decide how to serialize Python dict objects into bytes.\n",
     "# Hint: You may want to convert your Python dict → JSON string → UTF-8 bytes.\n",
+    "import json\n",
     "\n",
-    "producer = KafkaProducer(bootstrap_servers=[...],\n",
-    "                        value_serializer=...)"
+    "producer = KafkaProducer(bootstrap_servers=[\"localhost:9092\"],\n",
+    "                        value_serializer=lambda value: json.dumps(value).encode(\"utf-8\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "b67582ee",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing to Kafka Broker\n",
+      "Data written to topic: lab02-yuboc\n"
+     ]
+    }
+   ],
    "source": [
     "# [TODO]: Add a few more examples of city data below\n",
-    "cities = [make_city_data(\"Pittsburgh\" , 64), make_city_data(... , ...), make_city_data(... , ...)]\n",
+    "cities = [make_city_data(\"Pittsburgh\", 64), make_city_data(\"Nanjing\", 32), make_city_data(\"San Diego\", 58)]\n",
     "\n",
     "print(\"Writing to Kafka Broker\")\n",
     "for i in range(10):\n",
@@ -173,8 +180,8 @@
     "\n",
     "consumer = KafkaConsumer(\n",
     "    topic,  # [TODO]: Use your topic variable here\n",
-    "    bootstrap_servers=[...],  # [TODO]: Same bootstrap server as producer\n",
-    "    auto_offset_reset=...,  # [TODO]: Try 'earliest', 'latest', or 'none'\n",
+    "    bootstrap_servers=[\"localhost: 9092\"],  # [TODO]: Same bootstrap server as producer\n",
+    "    auto_offset_reset='earliest',  # [TODO]: Try 'earliest', 'latest', or 'none'\n",
     "    # Commit that an offset has been read\n",
     "    enable_auto_commit=True,\n",
     "    # How often to tell Kafka, an offset has been read\n",
