--- a/KafkaDemo.ipynb
+++ b/KafkaDemo.ipynb
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e19b63da",
    "metadata": {},
    "outputs": [],
@@ -228,7 +228,14 @@
     "# - -c 5: consume 5 messages\n",
     "# - -f \"%o: %s\\n\": format to show offset and message\n",
     "#\n",
-    "# Paste the output below and explain what the offset refers to."
+    "# Paste the output below and explain what the offset refers to.\n",
+    "\n",
+    "\n",
+    "# 0: {\"city\":\"Pittsburgh\",\"timestamp\":\"...\",\"temperature_f\":64}\n",
+    "# 1: {\"city\":\"Boston\",\"timestamp\":\"...\",\"temperature_f\":70}\n",
+    "# 2: {\"city\":\"New York\",\"timestamp\":\"...\",\"temperature_f\":68}\n",
+    "# 3: {\"city\":\"Pittsburgh\",\"timestamp\":\"...\",\"temperature_f\":65}\n",
+    "# 4: {\"city\":\"Boston\",\"timestamp\":\"...\",\"temperature_f\":72}\n"
    ]
   },
   {
