--- a/KafkaDemo.ipynb
+++ b/KafkaDemo.ipynb
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e19b63da",
    "metadata": {},
    "outputs": [],
@@ -231,11 +231,11 @@
     "# Paste the output below and explain what the offset refers to.\n",
     "\n",
     "\n",
-    "# 0: {\"city\":\"Pittsburgh\",\"timestamp\":\"...\",\"temperature_f\":64}\n",
-    "# 1: {\"city\":\"Boston\",\"timestamp\":\"...\",\"temperature_f\":70}\n",
-    "# 2: {\"city\":\"New York\",\"timestamp\":\"...\",\"temperature_f\":68}\n",
-    "# 3: {\"city\":\"Pittsburgh\",\"timestamp\":\"...\",\"temperature_f\":65}\n",
-    "# 4: {\"city\":\"Boston\",\"timestamp\":\"...\",\"temperature_f\":72}\n"
+    "# 0: {\"city\": \"Nanjing\", \"timestamp\": \"2026-01-21 21:05:32\", \"temperature_f\": 32}\n",
+    "# 1: {\"city\": \"Pittsburgh\", \"timestamp\": \"2026-01-21 21:05:32\", \"temperature_f\": 64}\n",
+    "# 2: {\"city\": \"San Diego\", \"timestamp\": \"2026-01-21 21:05:32\", \"temperature_f\": 58}\n",
+    "# 3: {\"city\": \"Pittsburgh\", \"timestamp\": \"2026-01-21 21:05:32\", \"temperature_f\": 64}\n",
+    "# 4: {\"city\": \"Pittsburgh\", \"timestamp\": \"2026-01-21 21:05:32\", \"temperature_f\": 64}\n"
    ]
   },
   {
